--- a/codeChallenge/day9/style.css
+++ b/codeChallenge/day9/style.css
@@ -57,11 +57,13 @@ body{
 
 .blocks{
     width: 150px;
+    display: flex;
+    justify-content: space-around;
 }
 
 .block{
-    width: 10px;
-    height: 40px;
+    width: 20px;
+    height: 50px;
     background-color: white;
     animation: blockAni 1s ease-in-out infinite;
 }
